<resources>
    <string name="app_name">CourtCounter</string>
    <string name="touchdown">Touchdown</string>
    <string name="extra_point">Extra Point</string>
    <string name="two_pt_conversion">2 Pt Conversion</string>
    <string name="field_goal">Field Goal</string>
    <string name="default_score">0</string>
    <string name="team_image">team image</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>
