<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/team_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/team_image"
        android:scaleType="fitStart"
        android:src="@drawable/patriots_eagles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/team_image"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_4"
                android:text="@string/team_a"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_4"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:id="@+id/team_a_touchdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:onClick="addTouchdownForTeamA"
                android:text="@string/touchdown"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_a_extra_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="addExtraPointForTeamA"
                android:text="@string/extra_point"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_a_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="add2PointForTeamA"
                android:text="@string/two_pt_conversion"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_a_field_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="addFieldGoalForTeamA"
                android:text="@string/field_goal"
                android:textAllCaps="true" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="@dimen/no_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_4"
                android:text="@string/team_b"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_4"
                android:text="@string/default_score"
                android:textColor="#000000"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:id="@+id/team_b_touchdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:onClick="addTouchdownTeamB"
                android:text="@string/touchdown"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_b_extra_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="addExtraPointTeamB"
                android:text="@string/extra_point"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_b_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="add2PointsForTeamB"
                android:text="@string/two_pt_conversion"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_b_field_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:onClick="addFieldGoalForTeamB"
                android:text="@string/field_goal"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_24"
        android:onClick="resetScores"
        android:text="@string/reset"
        android:textAllCaps="true" />

</RelativeLayout>
